gccida/c2/express_from
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7567:20: error: unknown type name 'induction_1'
rtx  express_from( induction_1 *g1, induction_1 *g2) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7567:37: error: unknown type name 'induction_1'
rtx  express_from( induction_1 *g1, induction_1 *g2) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7585:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7587:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7587:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7588:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7634:72: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( unsigned __int16)*( _DWORD *)add_val == 78 && ( v20 = ( __int64)add_val[1], *( _WORD *)v20 == 54) ) 
                                                                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7638:1: error: use of undeclared identifier 'v23'
v23 = gen_rtx_CONST_INT( VOIDmode, *( _QWORD *)( v20 + 8) * v17); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7641:7: error: use of undeclared identifier 'v23'
v25 = v23; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/loop.c:7668:34: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( v13 = (  struct rtx_def *)v11[1], v14 = *( _DWORD *)v13, ( unsigned __int16)( *( _DWORD *)v13 - 54) <= 0xEu) 
                                 ^~~~~~
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from/src/obj/loop.o] Error 1
